--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,9 @@
         android:id="@+id/diceRoll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dice Roll"
+        android:text="Click for Dice Roll"
         android:textSize="32sp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:background="#03DAC5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
