--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,10 +23,10 @@
         android:id="@+id/diceRoll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Click for Dice Roll"
+        android:text="Click for roll"
         android:textSize="32sp"
-        android:textColor="@color/black"
-        android:background="#03DAC5"
+        android:textColor="@color/white"
+        android:background="#E91E63"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.54"
