--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/image"
         android:layout_width="140dp"
         android:layout_height="100dp"
+        android:background="#441717"
         android:src="@drawable/dice_1"
         app:layout_constraintBottom_toTopOf="@+id/diceRoll"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,9 +48,25 @@
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintHorizontal_bias="0.584"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.825" />
+        app:layout_constraintVertical_bias="0.796" />
+
+    <TextView
+        android:id="@+id/diceRoll3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#A993CF"
+        android:padding="12dp"
+        android:text="Coderdkjdiofjw;oj"
+        android:textColor="@color/black"
+        android:textSize="32sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.415"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.936" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
