--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,20 +38,20 @@
         app:layout_constraintVertical_bias="0.652" />
 
     <TextView
-        android:id="@+id/diceRoll2"
+        android:id="@+id/diceRoll4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FF9800"
+        android:background="#8CA19F"
         android:padding="12dp"
         android:text="Kishan Sharma"
         android:textColor="@color/black"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.584"
+        app:layout_constraintHorizontal_bias="0.415"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.796" />
+        app:layout_constraintVertical_bias="0.789" />
 
     <TextView
         android:id="@+id/diceRoll3"
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:background="#A993CF"
         android:padding="12dp"
-        android:text="Coderdkjdiofjw;oj"
+        android:text="Coderd"
         android:textColor="@color/black"
         android:textSize="32sp"
         app:layout_constraintBottom_toBottomOf="parent"
