--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <ImageView
@@ -20,15 +21,15 @@
         app:layout_constraintVertical_bias="0.844" />
 
     <TextView
-        android:padding="12dp"
         android:id="@+id/diceRoll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#FF9800"
+        android:padding="12dp"
         android:text="Click for roll"
-        android:textSize="32sp"
 
         android:textColor="@color/black"
-        android:background="#FF9800"
+        android:textSize="32sp"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,4 +70,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.936" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/diceRoll2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#3B50C8"
+        android:padding="12dp"
+        android:text="University of lucknow"
+        android:textColor="@color/black"
+        android:textSize="32sp"
+         />
+
+</LinearLayout>
